# nemoapps

./: CMakeLists.txt  base.conf.in  manifest.json
3d/: 3d.conf.in  3d.cpp  CMakeLists.txt
app/: CMakeLists.txt  xemoapp.c  xemoapp.h  xemoapp.pc.in
background/: CMakeLists.txt  background.c  background.conf.in  manifest.json
background/sounds/: License
bistro/: CMakeLists.txt  bistro.c
browser/: browser.c  dispatch.c
card/: CMakeLists.txt  card.c  card.conf.in  manifest.json
card/background/: CMakeLists.txt  background.c
card/links/culturecenter/: config.json
card/links/entertainment/: main.js
card/links/shopguide/: config.json
card/links/shoppingnews/: package.json
card/menu/: CMakeLists.txt  menu.c
card/screensaver/: CMakeLists.txt  screensaver.c
card/sounds/: License
clock/: CMakeLists.txt  clock.c  clock.conf.in  manifest.json
clock2/: clock.c  clock2.conf.in
commander/: CMakeLists.txt  commander.c  ground.c  menu.c
commander/movies/bg/table/1k/: sub.mov
commander/movies/bg/table/4k/: main.mov  sub.mov
connmand/: connmand.c
debian/: changelog  control  nemo.background.install  nemo.card.install  nemo.clock.install  nemo.explorer.install  nemo.filebrowser.install  nemo.image.install  nemo.karim.install  nemo.keyboard.install  nemo.livestream.install  nemo.pdf.install  nemo.screensaver.install  nemo.stat.install  nemo.text.install  nemo.universe-background.install  nemo.universe-menu.install  nemo.universe-planet.install  nemo.weather.install  nemoapps-bin.install  nemoapps.install  nemobackground.install  nemocard.install  nemoclock.install  nemoexplorer.install  nemokeyboard.install  nemolivestream.install  nemoplayer.install  nemouniverse-menu.install  nemouniverse-planet.install  nemoweather.install  rules
demo/: CMakeLists.txt
explorer/: CMakeLists.txt  PostInstall.cmake  explorer.c  explorer.conf.in  manifest.json  nemo-thumb.sh
explorer2/: CMakeLists.txt  explorer2.c  explorer2.conf.in
filebrowser/: CMakeLists.txt  explorer2.c  explorer2.conf.in  filebrowser.c  filebrowser.conf.in  manifest.json
graph/: CMakeLists.txt  nemodavi.pc.in  nemodavi_attr.h  nemodavi_data.h  nemodavi_item.c  nemodavi_selector.c  nemodavi_transition.c  nemodavi_transition.h
graph/layouts/: arc.c  area.c  donut.c  donutarray.c  histogram.c  test.c
graph/tests/: test_basic.c  test_layout.c  test_layout_donut.c  test_listener.c
ground/: CMakeLists.txt  ground.c  ground.conf.in
helper/: CMakeLists.txt  fbohelper.h  gsthelper.c  helper_skia.cpp  helper_skia.h  helper_skia.hpp  meshhelper.cpp  nemowrapper.h  skiahelper.cpp  skiahelper.h  skiahelper.hpp
icons/: CMakeLists.txt
image/: CMakeLists.txt  image.c  image.conf.in  manifest.json
images/: CMakeLists.txt
karim/: CMakeLists.txt  karim.c  karim.conf.in  manifest.json
karim/links/2/: config.json  package.json
keyboard/: CMakeLists.txt  keyboard.c  keyboard.conf.in  manifest.json
launcher/: CMakeLists.txt  launcher.c  launcher.conf.in
launcher/links/digitalsign/: config.json
launcher/links/multitouch/: config.json
launcher/links/nemoux/: config.json
launcher/movies/bg/wall/1k/: main.mov  sub.mov
livestream/: CMakeLists.txt  livestream.c  livestream.conf.in  manifest.json
map/: map.c  map.conf.in
menu/: menu.c  menu.conf.in
multiplayer/: 3  CMakeLists.txt  multiplayer.c
pdf/: CMakeLists.txt  manifest.json  pdf.c  pdf.conf.in
player/: CMakeLists.txt  manifest.json  player.c  player.conf.in
rdp/: rdp.c
remote/: CMakeLists.txt  remote.c
sample/: CMakeLists.txt
screensaver/: CMakeLists.txt  manifest.json  screensaver.c  screensaver.conf.in
sound/: CMakeLists.txt  sound.c  sound.h
stat/: CMakeLists.txt  manifest.json  stat.c  stat.conf.in
test/: CMakeLists.txt  test.c  test.conf.in
test/animation/: animation.c
test/bar/: CMakeLists.txt  bar.c
test/button/: CMakeLists.txt  button.c
test/frame/: CMakeLists.txt  frame.c
test/gradient/: gradient.c
test/main/: CMakeLists.txt  test.c
test/map/: map.c  mapdata.h  mapinfo_party.c  mapinfo_runner.c  mapinfo_util.c  mapinfo_util.h  test_map.conf.in
test/pie/: pie.c
test/pies/: CMakeLists.txt  pies.c
test/player/: CMakeLists.txt  player.c
test/plexus/: CMakeLists.txt  plexus.c  test_plexus.conf.in
test/spinfx/: CMakeLists.txt  spinfx.c
text/: CMakeLists.txt  manifest.json  text.c  text.conf.in
udevd/: CMakeLists.txt  nemoudevd.service  udevd.c  udevd.conf.in
ui/: CMakeLists.txt  nemoui-button.c  nemoui-button.h  nemoui-drawer.c  nemoui-drawer.h  nemoui-event.c  nemoui-event.h  nemoui-gesture.c  nemoui-gesture.h  nemoui-graph.h  nemoui-image.cpp  nemoui-image.h  nemoui-misc.h  nemoui-path.c  nemoui-path.h  nemoui-player.c  nemoui-player.h  nemoui-text.c  nemoui-text.h  nemoui-thread.c  nemoui-thread.h  nemoui.h  nemoui.pc.in
universe/: CMakeLists.txt  universe.conf.in
universe/background/: CMakeLists.txt  background.c  manifest.json  universe-background.c  universe-background.conf.in
universe/menu/: CMakeLists.txt  manifest.json  menu.c  nemouniverse-menu.conf.in  universe-menu.c  universe-menu.conf.in
universe/planet/: CMakeLists.txt  manifest.json  planet.c  universe-planet.c  universe-planet.conf.in
util/: CMakeLists.txt  map.h  nemoutil-color.h  nemoutil-common.c  nemoutil-common.h  nemoutil-con.c  nemoutil-con.h  nemoutil-config.c  nemoutil-config.h  nemoutil-dbus.c  nemoutil-dbus.h  nemoutil-file.c  nemoutil-file.h  nemoutil-image.cpp  nemoutil-image.h  nemoutil-json.h  nemoutil-list.h  nemoutil-log.h  nemoutil-path.c  nemoutil-path.h  nemoutil-string.c  nemoutil-string.h  nemoutil-svg.c  nemoutil-svg.h  nemoutil-xml.c  nemoutil-xml.h  nemoutil.h  nemoutil.pc.in  util-color.h  util-common.c  util-common.h  util-con.c  util-config.c  util-config.h  util-dbus.c  util-dbus.h  util-file.c  util-file.h  util-image.cpp  util-image.h  (+40 more)
view/: CMakeLists.txt  player.c  player.h  view.h
wall/: CMakeLists.txt  wall.conf.in
wall/background/: CMakeLists.txt  background.c
wall/menu/: CMakeLists.txt  menu.c
weather/: CMakeLists.txt  manifest.json  weather.c  weather.conf.in
(+186 files in other folders)
