PROJECT(nemoapps)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)

cmake_policy(VERSION 2.8)

SET(nemoapps_VERSION_MAJOR 0)
SET(nemoapps_VERSION_MINOR 1)

SET(NEMO_ROOT "/opt/pkgs")
SET(NEMO_DEVID "nemo")

SET(NEMOIMAGE "${NEMO_ROOT}/${NEMO_DEVID}.image/exec")
SET(NEMOPLAYER "${NEMO_ROOT}/${NEMO_DEVID}.player/exec")
SET(NEMOPDF "${NEMO_ROOT}/${NEMO_DEVID}.pdf/exec")
SET(NEMOTEXT "${NEMO_ROOT}/${NEMO_DEVID}.text/exec")
SET(NEMOEXPLORER "${NEMO_ROOT}/${NEMO_DEVID}.explorer/exec")
SET(NEMOKEYBOARD "${NEMO_ROOT}/${NEMO_DEVID}.keyboard/exec")
SET(NEMOWEATHER "${NEMO_ROOT}/${NEMO_DEVID}.weather/exec")
SET(NEMOCLOCK "${NEMO_ROOT}/${NEMO_DEVID}.clock/exec")
SET(NEMOSTAT "${NEMO_ROOT}/${NEMO_DEVID}.stat/exec")
SET(NEMOLIVESTREAM "${NEMO_ROOT}/${NEMO_DEVID}.livestream/exec")

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})

SET(BIN_DIR  "${CMAKE_INSTALL_PREFIX}/bin")
SET(DOC_DIR  "${CMAKE_INSTALL_PREFIX}/share/doc/${PROJECT_NAME}")
SET(DATA_DIR "${CMAKE_INSTALL_PREFIX}/share/${PROJECT_NAME}")
SET(ICON_DIR "${DATA_DIR}/icons")
SET(IMG_DIR "${DATA_DIR}/images")
SET(SOUND_DIR "${DATA_DIR}/sounds")
SET(MOV_DIR "${DATA_DIR}/movies")
SET(LOG_DIR "/opt/log/${PROJECT_NAME}")
SET(ETC_DIR "/etc/${PROJECT_NAME}")

SET(THUMB_DIR ".nemo-thumbnail")
ADD_DEFINITIONS(-DTHUMB_DIR="${THUMB_DIR}")

SET(CMAKE_INSTALL_LIBDIR "${CMAKE_INSTALL_PREFIX}/lib${CMAKE_LIBRARY_SUFFIX}")
SET(CMAKE_INSTALL_INCDIR "${CMAKE_INSTALL_PREFIX}/include")
SET(CMAKE_INSTALL_PKGDIR "${CMAKE_INSTALL_LIBDIR}/pkgconfig")

ADD_DEFINITIONS(-DPROJECT_NAME="${PROJECT_NAME}")
ADD_DEFINITIONS(-DBIN_DIR="${BIN_DIR}")
ADD_DEFINITIONS(-DDATA_DIR="${DATA_DIR}")
ADD_DEFINITIONS(-DICON_DIR="${ICON_DIR}")
ADD_DEFINITIONS(-DIMG_DIR="${IMG_DIR}")
ADD_DEFINITIONS(-DSOUND_DIR="${SOUND_DIR}")
ADD_DEFINITIONS(-DETC_DIR="${ETC_DIR}")
ADD_DEFINITIONS(-DLOG_DIR="${LOG_DIR}")

#SET(BUILD_SHARED_LIBS ON)

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(NEMO REQUIRED nemoapps nemobus nemohelper nemoplay uuid)
INCLUDE_DIRECTORIES(${NEMO_INCLUDE_DIRS})
LINK_DIRECTORIES(${NEMO_LIBRARY_DIRS})

#PKG_CHECK_MODULES(HARFBUZZ REQUIRED harfbuzz)
#INCLUDE_DIRECTORIES(${HARFBUZZ_INCLUDE_DIRS})
#LINK_DIRECTORIES(${HARFBUZZ_LIBRARY_DIRS})

PKG_CHECK_MODULES(COMMON REQUIRED expat pixman-1 json-c libcurl MagickWand sqlite3 ao libudev mount libprocps dbus-1
    libcrypto
    sndfile
    )
#libavutil libavcodec

INCLUDE_DIRECTORIES(${COMMON_INCLUDE_DIRS})
LINK_DIRECTORIES(${COMMON_LIBRARY_DIRS})

#PKG_CHECK_MODULES(GLIB REQUIRED glib-2.0)
#INCLUDE_DIRECTORIES(${GLIB_INCLUDE_DIRS})
#LINK_DIRECTORIES(${GLIB_LIBRARY_DIRS})

#PKG_CHECK_MODULES(GSTREAMER REQUIRED gstreamer-1.0 gstreamer-pbutils-1.0)
#INCLUDE_DIRECTORIES(${GSTREAMER_INCLUDE_DIRS})
#LINK_DIRECTORIES(${GSTREAMER_LIBRARY_DIRS})

#PKG_CHECK_MODULES(GL REQUIRED gl egl)
#INCLUDE_DIRECTORIES(${GL_INCLUDE_DIRS})
#LINK_DIRECTORIES(${GL_LIBRARY_DIRS})

PKG_CHECK_MODULES(SKIA REQUIRED skia)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE_DIRS})
LINK_DIRECTORIES(${SKIA_LIBRARY_DIRS})

FIND_PATH(MAGIC_INCLUDE_DIR NAMES magic.h)
FIND_LIBRARY(MAGIC_LIBRARY NAMES libmagic.so)
INCLUDE_DIRECTORIES(${MAGIC_INCLUDE_DIR})

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DMAGICKCORE_QUANTUM_DEPTH=16 -DMAGICKCORE_HDRI_ENABLE=0")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS}")
SET(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS}")

IF(WITH_OPTIMIZE)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -Wno-unused-result")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Wno-unused-result")
ENDIF(WITH_OPTIMIZE)

IF(WITH_DEBUG)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
ENDIF(WITH_DEBUG)

IF(WITH_PROFILE)
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pg")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
	SET(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS} -pg")
ENDIF(WITH_PROFILE)

SET(WITH_CONNMAN OFF)
IF(WITH_CONNMAN)
    ADD_DEFINITIONS(-DWITH_CONNMAN)
ENDIF(WITH_CONNMAN)

SET(WITH_SAMPLE OFF)
IF(WITH_SAMPLE)
    ADD_DEFINITIONS(-DWITH_SAMPLE)
ENDIF(WITH_SAMPLE)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fdiagnostics-color=auto -Wall -fPIC")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-z,defs -Wl,--as-needed -Wl,--hash-style=both")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS} -std=c++11")

SET(NEMOAPPS_COMMON_LIBRARIES
    m
    rt
    magic
    pthread
    ${NEMO_LIBRARIES}
    ${COMMON_LIBRARIES}
    ${MAGIC_LIBRARY}
	)

INCLUDE_DIRECTORIES(
    #${CMAKE_CURRENT_BINARY_DIR}
    ${CMAKE_SOURCE_DIR}/thirds
    ${CMAKE_SOURCE_DIR}/helper
    ${CMAKE_SOURCE_DIR}/util
    ${CMAKE_SOURCE_DIR}/widget/
    ${CMAKE_SOURCE_DIR}/ui/
    ${CMAKE_SOURCE_DIR}/graph/
    ${CMAKE_SOURCE_DIR}/sound/
    )

SET(CONFXML "base.conf")
CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )

ADD_SUBDIRECTORY(helper)
ADD_SUBDIRECTORY(util)
ADD_SUBDIRECTORY(widget)
ADD_SUBDIRECTORY(ui)
ADD_SUBDIRECTORY(sound)

ADD_SUBDIRECTORY(udevd)

ADD_SUBDIRECTORY(clock)
ADD_SUBDIRECTORY(stat)
ADD_SUBDIRECTORY(text)
ADD_SUBDIRECTORY(weather)
ADD_SUBDIRECTORY(keyboard)
ADD_SUBDIRECTORY(explorer)
ADD_SUBDIRECTORY(player)
ADD_SUBDIRECTORY(image)
ADD_SUBDIRECTORY(pdf)

ADD_SUBDIRECTORY(background)
ADD_SUBDIRECTORY(livestream)
ADD_SUBDIRECTORY(screensaver)
ADD_SUBDIRECTORY(universe)
ADD_SUBDIRECTORY(card)
ADD_SUBDIRECTORY(karim)

ADD_SUBDIRECTORY(demo)

#ADD_SUBDIRECTORY(filebrowser)

IF(WITH_SAMPLE)
    ADD_SUBDIRECTORY(sample)
ENDIF(WITH_SAMPLE)
