SET(LIBNAME "xemoapp")

PKG_CHECK_MODULES(UTIL REQUIRED fontconfig)
INCLUDE_DIRECTORIES(${UTIL_INCLUDE_DIRS})
LINK_DIRECTORIES(${UTIL_LIBRARY_DIRS})

ADD_LIBRARY(${LIBNAME} SHARED
    xemoapp.h
    xemoapp.c
    )
ADD_DEPENDENCIES(${LIBNAME} xemoutil)
TARGET_LINK_LIBRARIES(${LIBNAME}
    ${NEMOAPPS_COMMON_LIBRARIES}
    ${NEMOUTIL_LIBRARIES}
	)

CONFIGURE_FILE(${LIBNAME}.pc.in ${LIBNAME}.pc @ONLY)
INSTALL(TARGETS ${LIBNAME}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    )
INSTALL(FILES
    xemoapp.h
    DESTINATION ${CMAKE_INSTALL_INCDIR}/${LIBNAME}
    )
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${LIBNAME}.pc
    DESTINATION ${CMAKE_INSTALL_PKGDIR}
    )
