SET(LIBNAME "xemoapp")

ADD_LIBRARY(${LIBNAME} SHARED
    xemoapp.h
    xemoapp.c
    )
ADD_DEPENDENCIES(${LIBNAME} xemoutil)
TARGET_LINK_LIBRARIES(${LIBNAME} xemoutil
    ${NEMOAPPS_COMMON_LIBRARIES}
	)

INSTALL(TARGETS ${LIBNAME}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    )
INSTALL(FILES
    xemoapp.h
    DESTINATION ${CMAKE_INSTALL_INCDIR}/${LIBNAME}
    )
CONFIGURE_FILE(${LIBNAME}.pc.in ${LIBNAME}.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${LIBNAME}.pc
    DESTINATION ${CMAKE_INSTALL_PKGDIR}
    )
