SET(CONFXML "background.conf")
SET(APPNAME "nemobackground")
SET(BG_ICON_DIR "${ICON_DIR}/background")
SET(BG_IMG_DIR "${IMG_DIR}/background")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
ADD_DEFINITIONS(-DBG_ICON_DIR="${BG_ICON_DIR}")
ADD_DEFINITIONS(-DBG_IMG_DIR="${BG_IMG_DIR}")

ADD_EXECUTABLE(${APPNAME}
    background.c)
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget)

TARGET_LINK_LIBRARIES(${APPNAME}
    nemoutil
    nemowidget
    ${NEMOAPPS_COMMON_LIBRARIES}
	)

INSTALL(TARGETS ${APPNAME}
    DESTINATION bin
    )

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/images/
    DESTINATION  ${BG_IMG_DIR}
    )
