SET(CONFXML "background.conf")
SET(APPNAME "nemobackground")
SET(BACKGROUND_SOUND_DIR "${SOUND_DIR}/${APPNAME}")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")
ADD_DEFINITIONS(-DBACKGROUND_SOUND_DIR="${BACKGROUND_SOUND_DIR}")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")

ADD_EXECUTABLE(${APPNAME}
    background.c
    $<TARGET_OBJECTS:sound>
    )
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget nemoui)

TARGET_LINK_LIBRARIES(${APPNAME}
    nemoutil
    nemowidget
    nemoui
    ${NEMOAPPS_COMMON_LIBRARIES}
	)

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/sounds/
    DESTINATION  ${BACKGROUND_SOUND_DIR}
    )
INSTALL(TARGETS ${APPNAME}
    DESTINATION bin
    )
