SET(APP "background")
SET(APPID "${NEMO_DEVID}.${APP}")
SET(APPNAME "${APPID}.bin")
SET(APPROOT "${NEMO_ROOT}/${APPID}")
SET(APPDATA_ROOT "${APPROOT}/data")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")

ADD_EXECUTABLE(${APPNAME}
    ${APP}.c
    $<TARGET_OBJECTS:sound>
	)
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget nemoui)
TARGET_LINK_LIBRARIES(${APPNAME} nemoutil nemowidget nemoui
    ${NEMOAPPS_COMMON_LIBRARIES}
    )
INSTALL(TARGETS ${APPNAME}
    DESTINATION ${APPROOT}/bin
    )

SET(CONFXML "${APP}.conf")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )

SET(APP_SOUND_DIR "${APPDATA_ROOT}/sounds")
ADD_DEFINITIONS(-DAPP_SOUND_DIR="${APP_SOUND_DIR}")
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/sounds/
    DESTINATION  ${APP_SOUND_DIR}
    )
