SET(SUBPROJECT "nemocard")
SET(CONFXML "card.conf")
SET(CARD_ICON_DIR "${ICON_DIR}/card")
SET(CARD_IMG_DIR "${IMG_DIR}/card")
SET(CARD_SOUND_DIR "${SOUND_DIR}/card")
SET(CARD_LINK_DIR "${DATA_DIR}/card")
ADD_DEFINITIONS(-DSUBPROJECT="${SUBPROJECT}")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
ADD_DEFINITIONS(-DCARD_ICON_DIR="${CARD_ICON_DIR}")
ADD_DEFINITIONS(-DCARD_IMG_DIR="${CARD_IMG_DIR}")
ADD_DEFINITIONS(-DCARD_SOUND_DIR="${CARD_SOUND_DIR}")
ADD_DEFINITIONS(-DCARD_LINK_DIR="${CARD_LINK_DIR}")

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icons/
    DESTINATION  ${CARD_ICON_DIR}
    )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/images/
    DESTINATION  ${CARD_IMG_DIR}
    )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/sounds/
    DESTINATION  ${CARD_SOUND_DIR}
    )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/links/
    DESTINATION  ${CARD_LINK_DIR}
    )

ADD_SUBDIRECTORY(background)
ADD_SUBDIRECTORY(menu)
ADD_SUBDIRECTORY(screensaver)
