SET(CONFXML "nemocard.conf")
SET(APPNAME "nemocard")
SET(CARD_ICON_DIR "${ICON_DIR}/${APPNAME}")
SET(CARD_SOUND_DIR "${SOUND_DIR}/${APPNAME}")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")
ADD_DEFINITIONS(-DCARD_ICON_DIR="${CARD_ICON_DIR}")
ADD_DEFINITIONS(-DCARD_SOUND_DIR="${CARD_SOUND_DIR}")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")

ADD_EXECUTABLE(${APPNAME}
    card.c
    $<TARGET_OBJECTS:sound>
    )
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget)

TARGET_LINK_LIBRARIES(${APPNAME}
    nemoutil
    nemowidget
    ${NEMOAPPS_COMMON_LIBRARIES}
	)

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icons/
    DESTINATION  ${CARD_ICON_DIR}
    )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/sounds/
    DESTINATION  ${CARD_SOUND_DIR}
    )
INSTALL(TARGETS ${APPNAME}
    DESTINATION bin
    )
