SET(CONFXML "menu.conf")
SET(APPNAME "nemomenu")
SET(MENU_ANIM_DIR "${ANIM_DIR}/${APPNAME}")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")
ADD_DEFINITIONS(-DMENU_ANIM_DIR="${MENU_ANIM_DIR}")

ADD_EXECUTABLE(${APPNAME}
    menu.c
    $<TARGET_OBJECTS:sound>
    )
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget nemoui)

TARGET_LINK_LIBRARIES(${APPNAME}
    nemoutil
    nemowidget
    nemoui
    ${NEMOPLAY_LIBRARIES}
    ${NEMOAPPS_COMMON_LIBRARIES}
	)

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )
INSTALL(TARGETS ${APPNAME}
    DESTINATION bin
    )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/animations/
    DESTINATION  ${MENU_ANIM_DIR}
    )
