SET(CONFXML "commander.conf")
SET(APPNAME "nemocommander")
SET(COMMANDER_MOV_DIR "${MOV_DIR}/${APPNAME}")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")
ADD_DEFINITIONS(-DCOMMANDER_MOV_DIR="${COMMANDER_MOV_DIR}")

ADD_EXECUTABLE(${APPNAME}
    commander.c
    $<TARGET_OBJECTS:sound>
    )
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget nemoui)

TARGET_LINK_LIBRARIES(${APPNAME}
    nemoutil
    nemowidget
    nemoui
    ${NEMOPLAY_LIBRARIES}
    ${NEMOAPPS_COMMON_LIBRARIES}
	)

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )
INSTALL(TARGETS ${APPNAME}
    DESTINATION bin
    )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/animations/
    DESTINATION  ${COMMANDER_MOV_DIR}
    )
