SET(CONFXML "explorer.conf")
SET(APPNAME "nemoexplorer")
SET(EXP_ICON_DIR "${ICON_DIR}/explorer")
SET(EXP_IMG_DIR "${IMG_DIR}/explorer")
SET(EXP_THUMB_DIR ".nemo-thumbnail")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
ADD_DEFINITIONS(-DEXP_ICON_DIR="${EXP_ICON_DIR}")
ADD_DEFINITIONS(-DEXP_IMG_DIR="${EXP_IMG_DIR}")
ADD_DEFINITIONS(-DEXP_THUMB_DIR="${EXP_THUMB_DIR}")

ADD_EXECUTABLE(${APPNAME}
    explorer.c)
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget nemoui)

TARGET_LINK_LIBRARIES(${APPNAME}
    nemoutil
    nemowidget
    nemoui
    ${NEMOAPPS_COMMON_LIBRARIES}
	)

INSTALL(TARGETS ${APPNAME}
    DESTINATION bin
    )

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/images/
    DESTINATION  ${EXP_IMG_DIR}
    )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icons/
    DESTINATION  ${EXP_ICON_DIR}
    )

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/nemo-thumb.sh
    DESTINATION bin
    )
INSTALL(SCRIPT "PostInstall.cmake")
