SET(APP "explorer")
SET(APPID "${NEMO_DEVID}.${APP}")
SET(APPNAME "${APPID}")
SET(APPROOT "${NEMO_ROOT}/${APPNAME}")
SET(APPDATA_ROOT "${APPROOT}/data")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")

ADD_EXECUTABLE(${APPNAME}
    ${APP}.c
    )
SET_TARGET_PROPERTIES(${APPNAME} PROPERTIES OUTPUT_NAME "exec")
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget nemoui)
TARGET_LINK_LIBRARIES(${APPNAME} nemoutil nemowidget nemoui 
    ${NEMOAPPS_COMMON_LIBRARIES}
    )
INSTALL(TARGETS ${APPNAME}
    DESTINATION ${APPROOT}
    )

SET(CONFXML "${APP}.conf")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )

SET(APP_ICON_DIR "${APPDATA_ROOT}/icons")
ADD_DEFINITIONS(-DAPP_ICON_DIR="${APP_ICON_DIR}")
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icons/
    DESTINATION  ${APP_ICON_DIR}
    )

SET(APP_IMG_DIR "${APP_DATA_DIR}/images")
ADD_DEFINITIONS(-DAPP_IMG_DIR="${APP_IMG_DIR}")
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/images/
    DESTINATION  ${APP_IMG_DIR}
    )

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/nemo-thumb.sh
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_READ WORLD_EXECUTE
    DESTINATION bin
      )

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/manifest.json
    DESTINATION  ${APPROOT}
    )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icons
    DESTINATION  ${APPROOT}
    )
