SET(CONFXML "filebrowser.conf")
SET(APPNAME "nemofilebrowser")
SET(FB_ICON_DIR "${ICON_DIR}/filebrowser")
SET(FB_IMG_DIR "${IMG_DIR}/filebrowser")
SET(FB_THUMB_DIR ".nemo-thumbnail")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
ADD_DEFINITIONS(-DFB_ICON_DIR="${FB_ICON_DIR}")
ADD_DEFINITIONS(-DFB_IMG_DIR="${FB_IMG_DIR}")
ADD_DEFINITIONS(-DFB_THUMB_DIR="${FB_THUMB_DIR}")

ADD_EXECUTABLE(${APPNAME}
    filebrowser.c)
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget nemoui)

TARGET_LINK_LIBRARIES(${APPNAME}
    nemoutil
    nemoui
    nemowidget
    ${NEMOAPPS_COMMON_LIBRARIES}
	)

INSTALL(TARGETS ${APPNAME}
    DESTINATION bin
    )

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/images/
    DESTINATION  ${FB_IMG_DIR}
    )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icons/
    DESTINATION  ${FB_ICON_DIR}
    )
