#ADD_LIBRARY(gsthelper OBJECT
#    gsthelper.c
#    gsthelper.h
#    )
#
#ADD_LIBRARY(glhelper OBJECT
#    glhelper.c
#    glhelper.h
#    )
#
ADD_LIBRARY(meshhelper OBJECT
    meshhelper.cpp
    meshhelper.h
    )

ADD_LIBRARY(skiahelper OBJECT
    skiahelper.cpp
    skiahelper.h
    skiahelper.hpp
    )
#ADD_LIBRARY(oshelper OBJECT
#    oshelper.c
#    oshelper.h
#    )

ADD_LIBRARY(fbohelper OBJECT
    fbohelper.c
    fbohelper.h
    )

#ADD_LIBRARY(talehelper OBJECT
#    talehelper.c
#    talehelper.h
#    )
