ADD_LIBRARY(helper_skia OBJECT
    helper_skia.cpp
    helper_skia.h
    helper_skia.hpp
    )
#ADD_LIBRARY(gsthelper OBJECT
#    gsthelper.c
#    gsthelper.h
#    )
#
#ADD_LIBRARY(glhelper OBJECT
#    glhelper.c
#    glhelper.h
#    )
#
#ADD_LIBRARY(meshhelper OBJECT
#    meshhelper.cpp
#    meshhelper.h
#    )
#ADD_LIBRARY(oshelper OBJECT
#    oshelper.c
#    oshelper.h
#    )

#ADD_LIBRARY(fbohelper OBJECT
#    fbohelper.c
#    fbohelper.h
#    )
#
#ADD_LIBRARY(talehelper OBJECT
#    talehelper.c
#    talehelper.h
#    )
