SET(CONFXML "image.conf")
SET(APPNAME "nemoimage")
SET(IMAGE_ICON_DIR "${ICON_DIR}/image")
SET(IMAGE_IMG_DIR "${IMG_DIR}/image")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
ADD_DEFINITIONS(-DIMAGE_ICON_DIR="${IMAGE_ICON_DIR}")
ADD_DEFINITIONS(-DIMAGE_IMG_DIR="${EXP_IMG_DIR}")

ADD_EXECUTABLE(${APPNAME}
    image.c)
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget nemoui)

TARGET_LINK_LIBRARIES(${APPNAME}
    nemoutil
    nemoui
    nemowidget
    ${NEMOAPPS_COMMON_LIBRARIES}
	)

INSTALL(TARGETS ${APPNAME}
    DESTINATION bin
    )

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )

#INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icons/
#    DESTINATION  ${IMAGE_ICON_DIR}
#    )
