SET(APP "karim")
SET(APPID "${NEMO_DEVID}.${APP}")
SET(APPNAME "${APPID}")
SET(APPROOT "${NEMO_ROOT}/${APPNAME}")
SET(APPDATA_ROOT "${APPROOT}/data")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")

ADD_EXECUTABLE(${APPNAME}
    ${APP}.c
	)
SET_TARGET_PROPERTIES(${APPNAME} PROPERTIES OUTPUT_NAME "exec")
ADD_DEPENDENCIES(${APPNAME} xemoapp xemoutil nemowidget nemoui)
TARGET_LINK_LIBRARIES(${APPNAME} xemoapp xemoutil nemowidget nemoui
    ${NEMOAPPS_COMMON_LIBRARIES}
    )
INSTALL(TARGETS ${APPNAME}
    DESTINATION ${APPROOT}
    )

SET(CONFXML "${APP}.conf")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )

SET(APP_ICON_DIR "${APPDATA_ROOT}/icons")
ADD_DEFINITIONS(-DAPP_ICON_DIR="${APP_ICON_DIR}")
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icons/
    DESTINATION  ${APP_ICON_DIR}
    )

SET(APP_ICON_DIR "${APPDATA_ROOT}/icons")
ADD_DEFINITIONS(-DAPP_ICON_DIR="${APP_ICON_DIR}")
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icons/
    DESTINATION  ${APP_ICON_DIR}
    )

SET(APP_IMG_DIR "${APPDATA_ROOT}/images")
ADD_DEFINITIONS(-DAPP_IMG_DIR="${APP_IMG_DIR}")
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/images/
    DESTINATION  ${APP_IMG_DIR}
    )

SET(APP_LINK_DIR "${APPDATA_ROOT}/links")
ADD_DEFINITIONS(-DAPP_LINK_DIR="${APP_LINK_DIR}")
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/links/
    DESTINATION  ${APP_LINK_DIR}
    )

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/manifest.json
    DESTINATION  ${APPROOT}
    )
