SET(CONFXML "launcher.conf")
SET(APPNAME "nemolauncher")
SET(LAUNCHER_MOV_DIR "${MOV_DIR}/${APPNAME}")
SET(LAUNCHER_DATA_DIR "${DATA_DIR}/${APPNAME}")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")
ADD_DEFINITIONS(-DLAUNCHER_MOV_DIR="${LAUNCHER_MOV_DIR}")
ADD_DEFINITIONS(-DLAUNCHER_DATA_DIR="${LAUNCHER_DATA_DIR}")

ADD_EXECUTABLE(${APPNAME}
    launcher.c
    $<TARGET_OBJECTS:sound>
    )
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget nemoui)

TARGET_LINK_LIBRARIES(${APPNAME}
    nemoutil
    nemowidget
    nemoui
    ${NEMOPLAY_LIBRARIES}
    ${NEMOAPPS_COMMON_LIBRARIES}
	)

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )
INSTALL(TARGETS ${APPNAME}
    DESTINATION bin
    )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/movies/
    DESTINATION  ${LAUNCHER_MOV_DIR}
    )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/links/
    DESTINATION  ${LAUNCHER_DATA_DIR}
    )
