SET(CONFXML "livestream.conf")
SET(APPNAME "nemolivestream")
SET(MULTIPLAYER_ICON_DIR "${ICON_DIR}/livestream")
SET(MULTIPLAYER_IMG_DIR "${IMG_DIR}/livestream")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
ADD_DEFINITIONS(-DMULTIPLAYER_ICON_DIR="${MULTIPLAYER_ICON_DIR}")
ADD_DEFINITIONS(-DMULTIPLAYER_IMG_DIR="${EXP_IMG_DIR}")

PKG_CHECK_MODULES(NEMOPLAY REQUIRED nemoplay)
INCLUDE_DIRECTORIES(${NEMOPLAY_INCLUDE_DIRS})
LINK_DIRECTORIES(${NEMOPLAY_LIBRARY_DIRS})

ADD_EXECUTABLE(${APPNAME}
    livestream.c)
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget)

TARGET_LINK_LIBRARIES(${APPNAME}
    nemoutil
    nemowidget
    ${NEMOAPPS_COMMON_LIBRARIES}
    ${NEMOPLAY_LIBRARIES}
	)

INSTALL(TARGETS ${APPNAME}
    DESTINATION bin
    )

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icons/
    DESTINATION  ${MULTIPLAYER_ICON_DIR}
    )
