SET(CONFXML "pdf.conf")
SET(APPNAME "nemopdf")
SET(PDF_ICON_DIR "${ICON_DIR}/pdf")
SET(PDF_IMG_DIR "${IMG_DIR}/pdf")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
ADD_DEFINITIONS(-DPDF_ICON_DIR="${PDF_ICON_DIR}")
ADD_DEFINITIONS(-DPDF_IMG_DIR="${EXP_IMG_DIR}")

PKG_CHECK_MODULES(MUPDF mupdf libopenjp2)
FIND_LIBRARY(JBIG2DEC0_LIBRARY NAMES libjbig2dec.so)
FIND_LIBRARY(MUJS_LIBRARY NAMES libmujs.a)
SET(MUPDF_LIBRARIES ${MUPDF_LIBRARIES} ${JBIG2DEC0_LIBRARY} ${MUJS_LIBRARY})
INCLUDE_DIRECTORIES(${MUPDF_INCLUDE_DIRS})
LINK_DIRECTORIES(${MUPDF_LIBRARY_DIRS})


ADD_EXECUTABLE(${APPNAME}
    pdf.c)
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget nemoui)

TARGET_LINK_LIBRARIES(${APPNAME}
    nemoutil
    nemowidget
    nemoui
    ${MUPDF_LIBRARIES}
    ${NEMOAPPS_COMMON_LIBRARIES}
    jbig2dec
    z
    mujs
	)

#SET_TARGET_PROPERTIES(${APPNAME} PROPERTIES LINK_SEARCH_STATR_STATIC 1)
#SET_TARGET_PROPERTIES(${APPNAME} PROPERTIES LINK_SEARCH_END_STATIC 1)
#SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
TARGET_LINK_LIBRARIES(${APPNAME}
    )

INSTALL(TARGETS ${APPNAME}
    DESTINATION bin
    )

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )

#INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icons/
#    DESTINATION  ${PDF_ICON_DIR}
#    )
