SET(APP "pdf")
SET(APPID "${NEMO_DEVID}.${APP}")
SET(APPNAME "${APPID}.bin")
SET(APPROOT "${NEMO_ROOT}/${APPID}")
SET(APPDATA_ROOT "${APPROOT}/data")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")

PKG_CHECK_MODULES(MUPDF mupdf libopenjp2)
FIND_LIBRARY(JBIG2DEC0_LIBRARY NAMES libjbig2dec.so)
FIND_LIBRARY(MUJS_LIBRARY NAMES libmujs.a)
SET(MUPDF_LIBRARIES ${MUPDF_LIBRARIES} ${JBIG2DEC0_LIBRARY} ${MUJS_LIBRARY})
INCLUDE_DIRECTORIES(${MUPDF_INCLUDE_DIRS})
LINK_DIRECTORIES(${MUPDF_LIBRARY_DIRS})

ADD_EXECUTABLE(${APPNAME}
    ${APP}.c
	)
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget nemoui)
TARGET_LINK_LIBRARIES(${APPNAME} nemoutil nemowidget nemoui
    ${NEMOAPPS_COMMON_LIBRARIES}
    ${MUPDF_LIBRARIES}
    jbig2dec
    z
    mujs
    )
INSTALL(TARGETS ${APPNAME}
    DESTINATION ${APPROOT}/bin
    )

SET(CONFXML "${APP}.conf")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )
