SET(CONFXML "player.conf")
SET(APPNAME "nemoplayer")
SET(PLAYER_ICON_DIR "${ICON_DIR}/player")
SET(PLAYER_IMG_DIR "${IMG_DIR}/player")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
ADD_DEFINITIONS(-DPLAYER_ICON_DIR="${PLAYER_ICON_DIR}")
ADD_DEFINITIONS(-DPLAYER_IMG_DIR="${EXP_IMG_DIR}")

PKG_CHECK_MODULES(NEMOPLAY REQUIRED nemoplay)
INCLUDE_DIRECTORIES(${NEMOPLAY_INCLUDE_DIRS})
LINK_DIRECTORIES(${NEMOPLAY_LIBRARY_DIRS})

ADD_EXECUTABLE(${APPNAME}
    player.c)
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget nemoview)

TARGET_LINK_LIBRARIES(${APPNAME}
    nemoutil
    nemowidget
    nemoview
    ${NEMOAPPS_COMMON_LIBRARIES}
    ${NEMOPLAY_LIBRARIES}
	)

INSTALL(TARGETS ${APPNAME}
    DESTINATION bin
    )

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icons/
    DESTINATION  ${PLAYER_ICON_DIR}
    )
