SET(CONFXML "remote.conf")
SET(APPNAME "nemoremote")
SET(REMOTE_ICON_DIR "${ICON_DIR}/remote")
SET(REMOTE_IMG_DIR "${IMG_DIR}/remote")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
ADD_DEFINITIONS(-DREMOTE_ICON_DIR="${REMOTE_ICON_DIR}")
ADD_DEFINITIONS(-DREMOTE_IMG_DIR="${EXP_IMG_DIR}")

ADD_EXECUTABLE(${APPNAME}
    remote.c)
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget)

TARGET_LINK_LIBRARIES(${APPNAME}
    nemoutil
    nemowidget
    ${NEMOAPPS_COMMON_LIBRARIES}
    ${NEMOPLAY_LIBRARIES}
	)

INSTALL(TARGETS ${APPNAME}
    DESTINATION bin
    )

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icons/
    DESTINATION  ${REMOTE_ICON_DIR}
    )
